Banner background not showing in deployment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ button a{
 /* banner start here */
 
 .banner{
-    background: url(/assets/Herobg.png);
+    background: url("../assets/Herobg.png");
     /* background-position: center; */
     background-size: cover;
     background-repeat: no-repeat;
